Added upto formula

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="formula-editor selected-cell"></div>
             <!-- <div class="function-sign"></div> -->
             <img src="fxSymbol.png" alt="">
-            <input type="text" class="formula-editor formula-input">
+            <input type="text" class="formula-editor formula-input" placeholder="Formula Bar">
         </div>
         <div class="data-container">
             <div class="select-all"></div>
@@ -115,7 +115,7 @@
     <script src="script.js"></script>
     <script src="menu.js"></script>
     <script src="newOpenSave.js"></script>
-    <!-- <script src="formula.js"></script> -->
+    <script src="formula.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 </html>
